--- a/StockTraderRI.Modules.Market.Services/Properties/Resources.resx
+++ b/StockTraderRI.Modules.Market.Services/Properties/Resources.resx
@@ -119,12 +119,9 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="Market" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Data\Market.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
-  </data>
-  <data name="MarketFeedTickerSymbolNotFoundException" xml:space="preserve">
-    <value>Symbol does not exist in market feed.</value>
+    <value>..\Data\Market.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
   <data name="MarketHistory" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Data\MarketHistory.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+    <value>..\Data\MarketHistory.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
 </root>
